<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_nova_partida"
        android:orderInCategory="100"
        android:title="@string/action_nova_partida"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_limpar_hitorico"
        android:orderInCategory="100"
        android:title="@string/action_limpar_hitorico"
        app:showAsAction="never" />
     <item
        android:id="@+id/action_tema_escuro"
        android:orderInCategory="100"
        android:title="@string/action_tema_escuro"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_limpar_estatistica"
        android:orderInCategory="100"
        android:title="@string/action_limpar_estatisticas"
        app:showAsAction="never" />
   <item
        android:id="@+id/action_corrigir_estatistica"
        android:orderInCategory="100"
        android:title="@string/action_corrigir_estatisticas"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_limpar"
        android:orderInCategory="100"
        android:title="@string/action_apagar"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_configuracoes"
        android:orderInCategory="100"
        android:title="@string/action_configuracoes"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sobre"
        android:orderInCategory="100"
        android:title="@string/action_sobre"
        app:showAsAction="never" />
</menu>